--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,7 +48,7 @@ layout: default
 
   <!-- Keep titles & meta exactly as your CSS expects -->
   <div class="post-text">
-    <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
+    <a href="{{ post.url | relative_url }}">
       <h2 class="post-title">{{ post.title }}</h2>
       {% if post.subtitle %}
         <h3 class="post-subtitle">{{ post.subtitle }}</h3>
