--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,9 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand" href="{{"/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="navbar-brand" href="{{ "/" | relative_url }}">
+  <img src="{{ '/img/fruit.png' | relative_url }}" alt="{{ site.title | escape }}" style="height:40px;">
+</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fa fa-bars"></i>
@@ -15,7 +17,9 @@
           <a class="nav-link" href="{{"/about" | relative_url }}">نبذة</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/posts" | relative_url }}">المنشورات</a>
+          <a class="nav-link" href="{{ '/basket.html' | relative_url }}">
+    <img src="{{ '/img/shopping-cart.png' | relative_url }}" alt="سلة المشتريات" style="width:24px; height:24px;">
+  </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">تواصل</a>
