--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 
 {% include head.html %}
 
-<body>
+<body class="{{ page.page_class | default: '' }}">
 
   {% include navbar.html %}
 
@@ -16,6 +16,7 @@
 
   {% include google-analytics.html %}
 
+  
 </body>
 
 </html>
